<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParticipantDetail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_detail_participant"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_margin="16dp"
            tools:src="@tools:sample/avatars"/>

        <TextView
            android:id="@+id/tv_detail_participant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="@string/participant_name" />

        <TextView
            android:id="@+id/tv_detail_participant_creation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:textSize="16sp"
            tools:text="@string/creation"/>

        <TextView
            android:id="@+id/tv_detail_participant_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="16sp"
            tools:text="@string/bio"/>

    </LinearLayout>

</ScrollView>